# engineerica-dev

./: ConnectingToAnApplication.md  Developers.txt  Downloads.md  ExportingData.md  ProjectHome.md  README.md  README.txt  UsingTheAPI.md  script.sh  script_user_manual.md
Client Libraries/C/: README.md
Client Libraries/C/api/: DefaultAPI.c  DefaultAPI.h
Client Libraries/C/model/: action_result.h
Client Libraries/C/unit-test/: test_action_result.c
Client Libraries/Go/: README.md  api_default.go
Client Libraries/Go/api/: openapi.yaml
Client Libraries/Go/docs/: DefaultApi.md
Client Libraries/Java/: README.md  build.sbt
Client Libraries/Java/api/: openapi.yaml
Client Libraries/Java/docs/: DefaultApi.md
Client Libraries/JavaScript/src/: ApiClient.js
Client Libraries/Kotlin/: README.md
Client Libraries/Kotlin/docs/: DefaultApi.md
Client Libraries/PHP/lib/: HeaderSelector.php
Client Libraries/Perl/: README.md
Client Libraries/Perl/docs/: ActionResult.md  DefaultApi.md
Client Libraries/Perl/t/: DefaultApiTest.t
Client Libraries/Python/: README.md  setup.py
Client Libraries/Python/docs/: ActionResult.md
Client Libraries/Python/openapi_client/: exceptions.py
Client Libraries/Python/test/: test_default_api.py  test_error_action_result.py
Client Libraries/Ruby/: README.md  openapi_client.gemspec
Client Libraries/csharp-dotnet2/docs/: DefaultApi.md
Deprecated/api/: .gitignore
Python/docs/: DefaultApi.md  ErrorActionResult.md
api/src/EngineericaApi/: AssemblyInfo.cs  EngineericaApi.csproj
api/src/EngineericaApi.Example/: AssemblyInfo.cs  EngineericaApi.Example.csproj  Main.cs
client-libraries-generator/docker_files/: Dockerfile  README.md  cl-downloader.sh  docker_manual.md  script.sh
client-libraries/accucampus/: openapi.json
client-libraries/accucampus/c/: CMakeLists.txt  README.md
client-libraries/accucampus/c/api/: ActionassignmentAPI.c  ActionassignmentAPI.h  ActionitemAPI.c  ActionitemAPI.h  ActionlogAPI.h  ActionpackAPI.h  ActiontypeAPI.c  AdhocqueryAPI.c  AdhocqueryAPI.h  AdhocreportsAPI.c  AdhocreportsAPI.h  AdvancedstationAPI.c  AdvancedstationAPI.h  AdvroleAPI.h  AdvrolesAPI.c  AppointmentAPI.c  AppointmentAPI.h  AttendancelogAPI.c  AttendancelogAPI.h  AttendancelogcommentAPI.c  AttendancerestrictionAPI.c  AttendancerestrictionAPI.h  BeaconAPI.c  BeaconAPI.h  ClientAPI.h  CommunityAPI.c  CommunityAPI.h  CompasscategoryAPI.c  CompasscategoryAPI.h  CompassserviceAPI.c  CompassserviceAPI.h  ComputerlabAPI.c  ComputerlabAPI.h  DeadendrecordingAPI.c  DeadendrecordingAPI.h  DepartmentAPI.c  DepartmentAPI.h  EasyloginAPI.c  EasyloginAPI.h  EventAPI.c  (+76 more)
client-libraries/accucampus/c/model/: action_result.c
client-libraries/accucampus/c/src/: apiClient.c
client-libraries/accucampus/csharp-dotnet2/: README.md
client-libraries/accucampus/go/: README.md  api_actionassignment.go  api_actionitem.go  api_actionlog.go  api_actionpack.go  api_actiontype.go  api_adhocquery.go  api_adhocreports.go  api_advancedstation.go  api_advrole.go  api_advroles.go  api_appointment.go  api_appshare.go  api_attendancelog.go  api_attendancelogcomment.go  api_attendancerestriction.go  api_beacon.go  api_bgjob.go  api_captcha.go  api_client.go  api_community.go  api_compasscategory.go  api_compassservice.go  api_computerlab.go  api_deadendrecording.go  api_department.go  api_easylogin.go  api_event.go  api_eventreg.go  api_export.go  api_feature.go  api_general.go  api_holiday.go  api_import.go  api_interaction.go  api_license.go  api_like.go  api_location.go  api_media.go  api_mediatype.go  (+49 more)
client-libraries/accucampus/java/: .project  README.md  build.gradle  pom.xml
client-libraries/accucampus/javascript/: README.md  package.json
client-libraries/accucampus/kotlin/: .classpath  .project  README.md
client-libraries/accucampus/perl/: README.md
client-libraries/accucampus/php/: README.md  composer.json
client-libraries/accucampus/python/: README.md  setup.py
client-libraries/accucampus/ruby/: README.md  openapi_client.gemspec
client-libraries/accuclub/: openapi.json
client-libraries/accuclub/c/: CMakeLists.txt  README.md
client-libraries/accuclub/c/api/: ActionlogAPI.c  AdvroleAPI.c  AppshareAPI.h  AttendancelogAPI.c  AttendancelogcommentAPI.h  BgjobAPI.c  CreditAPI.c  CreditAPI.h  CreditplanAPI.c  CreditplanAPI.h  DefaultAPI.c  DefaultAPI.h  EasyloginAPI.c  EasyloginAPI.h  EventAPI.c  FeatureAPI.h  GeneralAPI.c  GeneralAPI.h  ImportAPI.h  LicenseAPI.c  LicenseAPI.h  LocationAPI.c  LocationAPI.h  MenuAPI.h  NotificationtopicAPI.h  QrlabelsAPI.c  ReportAPI.h  RoleAPI.h  RuleAPI.c  SearchAPI.h  SecurityAPI.c  SessionregAPI.c  SessionregAPI.h  SettingAPI.c  SettingAPI.h  StationAPI.c  StationAPI.h  TagAPI.c  TemplateAPI.c  TemplateAPI.h  (+2 more)
client-libraries/accuclub/c/include/: apiClient.h
client-libraries/accuclub/c/model/: error_action_result.c  error_action_result.h
client-libraries/accuclub/c/src/: apiClient.c
client-libraries/accuclub/csharp-dotnet2/: README.md
client-libraries/accuclub/go/: README.md  api_actionlog.go  api_advrole.go  api_advroles.go  api_appshare.go  api_attendancelog.go  api_bgjob.go  (+47 more)
client-libraries/accutraining/: openapi.json  script.sh
client-libraries/csharp-dotnet2/: README.md
client-libraries/go/: client.go  model_error_action_result.go  response.go
client-libraries/javascript/: README.md  package.json
codegen/: main.js
docs/: CNAME  index.html  index.xml  sitemap.xml
docs-src/: config.toml
docs/about/: index.html  index.xml
docs/accucampus/: index.html
docs/accuclub/: index.html  openapi.json
docs/accutraining/: index.html
docs/api-reference/: index.html  index.xml
docs/categories/: index.html  index.xml
docs/client-libraries/: index.html  index.xml
docs/css/: custom-styles.css  style.min.css
docs/gettingstarted/: index.html  index.xml
docs/js/: try.js
docs/new-site/: config.toml
docs/old-site/: index.html
docs/tags/: index.html  index.xml
trunk/codegen/: main.js
wiki/: ConnectingToAnApplication.wiki  Downloads.wiki  ExportingData.wiki  UsingTheAPI.wiki
(+6024 files in other folders)
